# obabot

./: .gitignore  BUSINESS_VALUE.md  INTERFACE_COVERAGE.md  LICENSE  README.md  pyproject.toml  pytest.ini
.github/: SECRETS_SETUP.md
.github/workflows/: publish.yml  test.yml
articles/: distribution_strategy.md  habr_article.md
examples/: aiogram_migrated.py  aiogram_original.py  dual_platform.py  max_only.py  model.json  telegram_only.py  test_mode_example.py  triple_platform.py  web_demo.py  yandex_only.py
obabot/: __init__.py  config.py  context.py  detection.py  factory.py  filters.py  fsm.py  mixins.py  types.py
obabot/adapters/: __init__.py  keyboard.py  max_callback.py  max_file.py  message.py  telegram_callback.py  user.py  yandex_callback.py  yandex_message.py  yandex_user.py
obabot/middleware/: __init__.py  fsm_coverage.py
obabot/proxy/: __init__.py  bot.py  dispatcher.py  router.py
obabot/utils/: __init__.py  max_api.py  safe_send.py  text_format.py
obabot/voyager/: __init__.py  bridge.py  chain_analyzer.py  depth_calculator.py  extractor.py  tracker.py
obabot/web/: __init__.py  api.py  auth.py  dispatch.py  emulators.py  pwa.py
tests/: README.md  __init__.py  conftest.py  test_aiogram_comparison.py  test_basic.py  test_bot_methods.py  test_chain_tracking.py  test_compatibility.py  test_detection.py  test_dispatcher.py  test_e2e_migration.py  test_extractor.py  test_fsm_voyager_integration.py  test_handlers.py  test_integration.py  test_integration_real.py  test_max_delete_workaround.py  test_router_handlers.py  test_test_mode.py  test_text_format.py  test_umaxbot.py  test_unified_interface.py  test_web.py  test_webhook_max.py  test_webhook_telegram.py  test_yandex.py
