[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "obabot"
version = "0.1.0"
description = "Universal async bot library for Telegram and Max with aiogram-compatible API"
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.10"
authors = [
    { name = "Alexander Alekseev", email = "phghost@mail.ru" }
]
keywords = ["telegram", "max", "bot", "async", "aiogram", "umaxbot"]

dependencies = [
    "aiogram>=3.0.0",
    "umaxbot>=0.1.7",
]

[project.optional-dependencies]
voyager = [
    "fsm-voyager>=0.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]
all = [
    "obabot[voyager,dev]",
]

[project.urls]
Homepage = "https://github.com/Korean-DOG/obabot"
Repository = "https://github.com/Korean-DOG/obabot"
Issues = "https://github.com/Korean-DOG/obabot/issues"

[tool.hatch.build.targets.wheel]
packages = ["obabot"]
